Refactor `AttachTest` to use JUnit 5